pokecard - fix long name wrapping

--- a/src/app/pages/pokedex/components/pokecard/pokecard.component.scss
+++ b/src/app/pages/pokedex/components/pokecard/pokecard.component.scss
@@ -18,4 +18,9 @@
       line-height: 30px;
     }
   }
+
+  .card-title {
+    white-space: nowrap;
+    overflow: hidden;
+  }
 }
